--- a/style.css
+++ b/style.css
@@ -3,14 +3,10 @@
     padding: 0;
     margin: 0;
 }
-
+/* For Desktop design(1440px) */
 body{
     background: var(--Very-dark-blue);
     font-family: 'Lexend Deca', sans-serif;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 :root{
@@ -20,86 +16,95 @@ body{
     --White : hsl(0, 0%, 100%);
     --Slightly-transparent-white : hsla(0, 0%, 100%, 0.75);
     --Slightly-transparent-white2 : hsla(0, 0%, 100%, 0.6);
-
 }
+main{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
 
 .container{
-    max-width: 80%;
-    display: flex;
+    max-width: 75%;
     background: var(--Dark-desaturated-blue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
     overflow: hidden;
-    border-radius: 5px;
+    border-radius: 8px;
+} 
+ .container .content{
+    max-width: 50%;
+    min-height: 75%;
+    margin-left: 60px;
 }
-
-.container .content{
-    margin: 50px auto;
-    max-width: 40%;
+.content section{
+    max-width: 80%;
 }
-
-.content>h1{
-    font-size: 3rem;
+section>h1{
+    font-size: 2.5rem;
     color: var(--White);
     font-weight: 700;
     font-family: 'Inter', sans-serif;
     margin-bottom: 30px;
 }
-
 h1 span{
     color: var(--Soft-violet);
 }
-
-.content>p{
+section>p{
     font-family: 'Lexend Deca', sans-serif;
-    font-size: 1.4rem;
-    line-height: 1.75;
+    font-size: 1.175rem;
+    line-height: 1.5;
     color: var(--Slightly-transparent-white);
-    margin-bottom: 80px;
+    margin-bottom: 70px;
 }
-
-.content .comtemque{
+.content footer{
     display: flex;
     align-items: center;
-    gap: 70px;
+    gap: 60px;
     text-transform: uppercase;
 }
 
-.comtemque h1{
+footer h1{
     color: var(--White);
     font-family: 'Inter', sans-serif;
-    font-size: 2rem;
+    font-size: 1.75rem;
+    align-content: flex-start;
 }
 
-.comtemque p{
+footer p{
     color: var(--Slightly-transparent-white2);
 }
 
-.container .header-img{
-    width: 50%;
-    position: relative;
+.container picture{
+    width: 100%;
+    height: 100%;
+    position: relative; 
     /* isolation: isolate; */
-}
+ }
 
-.container .header-img::before{
+.container picture::before{
 content: '';
 position: absolute;
 inset: 0;
-background-color: hsla(277, 64%, 61%, 0.35);;
+background-color: hsla(281, 82%, 39%, 0.5)
 }
-
-.header-img img.desktop{
+picture img.desktop{
     width:100%;
     height:100%;
     object-fit: cover;
 }
 
-.header-img img.mobile{
+picture img.mobile{
     display: none;
-}
+} 
 
 
-/* For mobile view(width=375px) */
+/* For Mobile ddesktop
+(375px)*/
 @media(max-width:600px){
-    body{
+   main{
         height: auto;
      }
 
@@ -107,20 +112,53 @@ background-color: hsla(277, 64%, 61%, 0.35);;
         max-width: 90%;
         flex-direction: column-reverse;
         margin: 50px auto;
+        height: auto;
     } 
 
     .container .content{
         max-width: 90%;
         text-align: center;
+        margin-left: 0;
+    } 
+    .content section{
+        margin: auto;
     }
-
-    .content>h1{
-        font-size: 2.5rem;
-    }
+      section h1{
+        font-size: 2.1rem;
+        margin-bottom: 21px;
+      }  
+      section p{
+        font-size: 1.1rem;
+        margin-bottom: 30px;
+      }
     
-    .container .header-img{
-    width: 100%;
+    .content footer{
+        flex-direction: column;
+        gap: 30px;
+        margin-bottom: 42px;
     }
+    .container picture{
+        width: 100%;
+        margin-bottom: 36px; 
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+/* 
+*/
+
+    
+    
+    /* 
 
     .header-img img.desktop{
         display: none;
@@ -134,8 +172,8 @@ background-color: hsla(277, 64%, 61%, 0.35);;
 
     .content .comtemque{
         flex-direction: column;
-        gap: 50px;
-    }
+        
+    } */
    
   
-}
+} *
