--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 *{
     box-sizing: border-box;
     padding: 0;
@@ -31,14 +30,14 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 400px;
+    height: 450px;
     overflow: hidden;
     border-radius: 8px;
 } 
  .container .content{
     max-width: 50%;
     min-height: 75%;
-    margin-left: 60px;
+    margin-left: 65px;
 }
 .content section{
     max-width: 80%;
@@ -48,7 +47,7 @@ section>h1{
     color: var(--White);
     font-weight: 700;
     font-family: 'Inter', sans-serif;
-    margin-bottom: 30px;
+    margin:16px auto 30px ;
 }
 h1 span{
     color: var(--Soft-violet);
@@ -58,7 +57,7 @@ section>p{
     font-size: 1.175rem;
     line-height: 1.5;
     color: var(--Slightly-transparent-white);
-    margin-bottom: 70px;
+    margin-bottom: 85px;
 }
 .content footer{
     display: flex;
@@ -154,207 +153,3 @@ picture img.mobile{
 
 
 
-/* 
-*/
-
-    
-    
-    /* 
-
-    .header-img img.desktop{
-        display: none;
-    }
-
-    .header-img img.mobile{
-     display: block;
-      width:100%;
-      height:100%;
-    }
-
-    .content .comtemque{
-        flex-direction: column;
-        
-    } */
-   
-  
-=======
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-}
-/* For Desktop design(1440px) */
-body{
-    background: var(--Very-dark-blue);
-    font-family: 'Lexend Deca', sans-serif;
-}
-
-:root{
-    --Very-dark-blue : hsl(233, 47%, 7%);
-    --Dark-desaturated-blue : hsl(244, 38%, 16%);
-    --Soft-violet : hsl(277, 64%, 61%);
-    --White : hsl(0, 0%, 100%);
-    --Slightly-transparent-white : hsla(0, 0%, 100%, 0.75);
-    --Slightly-transparent-white2 : hsla(0, 0%, 100%, 0.6);
-}
-main{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
-
-.container{
-    max-width: 75%;
-    background: var(--Dark-desaturated-blue);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 400px;
-    overflow: hidden;
-    border-radius: 8px;
-} 
- .container .content{
-    max-width: 50%;
-    min-height: 75%;
-    margin-left: 60px;
-}
-.content section{
-    max-width: 80%;
-}
-section>h1{
-    font-size: 2.5rem;
-    color: var(--White);
-    font-weight: 700;
-    font-family: 'Inter', sans-serif;
-    margin-bottom: 30px;
-}
-h1 span{
-    color: var(--Soft-violet);
-}
-section>p{
-    font-family: 'Lexend Deca', sans-serif;
-    font-size: 1.175rem;
-    line-height: 1.5;
-    color: var(--Slightly-transparent-white);
-    margin-bottom: 70px;
-}
-.content footer{
-    display: flex;
-    align-items: center;
-    gap: 60px;
-    text-transform: uppercase;
-}
-
-footer h1{
-    color: var(--White);
-    font-family: 'Inter', sans-serif;
-    font-size: 1.75rem;
-    align-content: flex-start;
-}
-
-footer p{
-    color: var(--Slightly-transparent-white2);
-}
-
-.container picture{
-    width: 100%;
-    height: 100%;
-    position: relative; 
-    /* isolation: isolate; */
- }
-
-.container picture::before{
-content: '';
-position: absolute;
-inset: 0;
-background-color: hsla(281, 82%, 39%, 0.5)
-}
-picture img.desktop{
-    width:100%;
-    height:100%;
-    object-fit: cover;
-}
-
-picture img.mobile{
-    display: none;
-} 
-
-
-/* For Mobile ddesktop
-(375px)*/
-@media(max-width:600px){
-   main{
-        height: auto;
-     }
-
-    .container{
-        max-width: 90%;
-        flex-direction: column-reverse;
-        margin: 50px auto;
-        height: auto;
-    } 
-
-    .container .content{
-        max-width: 90%;
-        text-align: center;
-        margin-left: 0;
-    } 
-    .content section{
-        margin: auto;
-    }
-      section h1{
-        font-size: 2.1rem;
-        margin-bottom: 21px;
-      }  
-      section p{
-        font-size: 1.1rem;
-        margin-bottom: 30px;
-      }
-    
-    .content footer{
-        flex-direction: column;
-        gap: 30px;
-        margin-bottom: 42px;
-    }
-    .container picture{
-        width: 100%;
-        margin-bottom: 36px; 
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-/* 
-*/
-
-    
-    
-    /* 
-
-    .header-img img.desktop{
-        display: none;
-    }
-
-    .header-img img.mobile{
-     display: block;
-      width:100%;
-      height:100%;
-    }
-
-    .content .comtemque{
-        flex-direction: column;
-        
-    } */
-   
-  
->>>>>>> 83131342fecf012805c0c26146f155e8f14b30af
-} *
